# chromalog

./: .codespellrc  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_package.yaml  quality_assurance.yaml  release_package.yaml
chromalog/: __init__.py  colorizer.py  log.py  stream.py
chromalog/mark/: __init__.py  helpers.py  objects.py
doc/source/: advanced.rst  conf.py  index.rst
samples/: fast-setup.py  highlighting.py  home-sample.py
tests/: common.py  conftest.py  test_colorizer.py  test_log.py  test_mark.py  test_stream.py
