[project]
name = "chromalog"
version = "3.0.0a0"

description = "A non-intrusive way to use colors in your logs and generic output."


authors = [
    {name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},
    {name = "Julien Kauffmann", email = "julien.kauffmann@freelan.org"},
]
maintainers = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},]

license = "MIT"
license-files = ["LICENSE"] # can't be in parent dir

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
]

requires-python = ">=3.10"

dependencies = [
    "colorama>=0.3.7",
    "six>=1.9.0,<2",
    "future>=0.14.3",
]

[project.optional-dependencies]
dev = [
    "prek",
    "bump2version",
    "ruff",
    "ty",
    "pytest",
    "coverage",
]

dev_old = [
    "ipdb == 0.8",
    "nose >= 1.3, < 2",
    "coverage >= 3.7.1, < 4",
    "coveralls == 0.5",
    "mock >= 1.0.1, < 2",
    "pep8 >= 1.5.7, < 2",
    "nose-parameterized == 0.3.5",
    "wheel == 0.24.0",
    "Sphinx >= 1.2.3, < 2",
    "sphinx-rtd-theme == 0.1.6",
]

all = ["chromalog[dev]"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Documentation = "http://chromalog.readthedocs.org/en/latest/index.html"
Issues = "https://github.com/orgua/chromalog/issues"
Source = "https://pypi.org/project/chromalog3/"

[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["unix", "linux", "osx", "cygwin", "win32", "win64"]
zip-safe = true
# exclude=['tests','scripts']

[tool.setuptools.package-dir]
chromalog = "chromalog"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-core = { path = "./shepherd_core", editable = true}
shepherd-data = { path = "./shepherd_data", editable = true}

[tool.coverage.run]
source = ["chromalog"]

[tool.ty.environment]
root = ["./shepherd_core", "./shepherd_data", "./extra", "./scratch"]
# TODO: renaming dirs could 'repair' autodiscovery

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = [
    "*/tests/**",
    "*/examples/**",  # temporary until specific rules can be disabled
]

[tool.ty.rules]
unresolved-import = "ignore"
missing-argument = "ignore"
